# ETAAcademy-ZK-Meme

./: 01_Elliptic_Curves.md  02_EIP-4844_RIP-7212.md  03_Stream_Cipher.md  04_zkSync_development_tools.md  05_Modular_Blockchains.md  06_Prime_Fields.md  07_PRG.md  08_zkStark_PartOne_FRI.md  09_PRG_Composition_Segment.md  10_zkStark_PartTwo_AIR_Rescue-Prime.md  11_block_cipher.md  12_ZKEVM.md  13_PRG.md  14_CPA.md  15_CBC.md  16_CTR.md  17_Fibonacci circuit by Halo2 API.md  17_Fibonacci_circuit_by_Halo2API.md  18_ICM.md  19_Hash.md  20_Plonk.md  21_Halo2_gadget_part2.md  22_AES.md  23_Lookup_Table.md  24_SHA256_Keccak_Poseidon.md  25_EIGamal_Gramer-Shoup_ECIES.md  26_BLS_ECDSA_Monero.md  27_Isogeny _Frobenius Endomorphi.md  28_Ring_Signatures.md  29_R1CS_Plonklish.md  29_R1CS_Plonklish_Plonk.md  30_Paillier_Homomorphism.md  31_Lagrange_Plonk.md  32_Permutation_Plonk.md  33_Copy_Constraints_Optimization_Plonk.md  34_Polynomial_Commitments.md  34_Polynomial_Commitments_Plonk.md  35_Lookup_Table2_Plonk.md  36_BulletProof.md  37_Zk_Schnoor_Paillier.md  (+50 more)
01_Ouick_Read/: 07_PRG.md  (+21 more)
Appendix/deepfold/util/: Cargo.toml
Appendix/deepfold/util/src/: interpolation.rs  lib.rs  merkle_tree.rs  query_result.rs  random_oracle.rs
Appendix/deepfold/util/src/algebra/: coset.rs  field.rs  mul_group.rs  polynomial.rs
Appendix/deepfold/util/src/algebra/field/: bn254.rs  ft255.rs  m31_ext.rs  mersenne61_ext.rs
Appendix/deepfold/util/src/sumcheck/: prover.rs  verifier.rs
Appendix/zkbridge/: Cargo.toml
Appendix/zkbridge/src/: converter.rs  lib.rs  merkle_path.rs  merkle_tree.rs
(+98 files in other folders)
